# refined-type

./: CODE_OF_CONDUCT.md  CONTRIBUTING  Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml  publish.yml  rust.yml
examples/: 1.rs
src/: error.rs  lib.rs  refined.rs  result.rs  rule.rs
src/rule/: closed_algebraic.rs  collection.rs  composer.rs  empty.rs  exists.rs  for_all.rs  length.rs  non_empty.rs  non_empty_string.rs  non_empty_vec.rs  number.rs  string.rs
src/rule/collection/: count.rs  exists.rs  for_all.rs  head.rs  index.rs  init.rs  iterable.rs  last.rs  nothing.rs  reverse.rs  skip.rs  tail.rs
src/rule/collection/count/: equal.rs  grater_equal.rs  greater.rs  less.rs  less_equal.rs
src/rule/collection/for_all/: collection.rs  string.rs
src/rule/collection/head/: collection.rs  string.rs
src/rule/collection/init/: collection.rs  string.rs
src/rule/collection/last/: collection.rs  string.rs
src/rule/collection/reverse/: collection.rs  string.rs
src/rule/collection/skip/: collection.rs  option.rs  string.rs
src/rule/collection/skip/option/: no_skip.rs  skip_even_index.rs  skip_first.rs  skip_odd_index.rs
src/rule/composer/: and.rs  equiv.rs  if_else.rs  imply.rs  nand.rs  nor.rs  not.rs  or.rs  xor.rs
src/rule/empty/: empty_definition.rs  iterator.rs  number.rs  string.rs
src/rule/for_all/: collection.rs  string.rs
src/rule/length/: equal.rs  grater.rs  length_definition.rs  less.rs  less_than.rs  min_max.rs
src/rule/non_empty/: non_empty_iter.rs  non_empty_map.rs  non_empty_set.rs  non_empty_string.rs  non_empty_vec.rs  non_empty_vec_deque.rs
src/rule/number/: equal.rs  even.rs  greater.rs  greater_equal.rs  less.rs  less_equal.rs  min_max.rs  more.rs  odd.rs  range.rs
src/rule/string/: alpha_digit.rs  alphabet.rs  digit.rs  email.rs  ipv4.rs  ipv6.rs  non_empty_string.rs  regex.rs
tests/: length.rs  number.rs  read_me.rs  regex.rs
