[package]
name = "refined_type"
description = "A library for imbuing rules into types and elevating them to more robust types"
authors = ["Tomoikey"]
repository = "https://github.com/tomoikey/refined-type"
readme = "README.md"
categories = ["development-tools"]
license = "MIT"
version = "0.3.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
anyhow = "1.0.80"