[package]
name = "refined_type"
description = "A library for imbuing rules into types and elevating them to more robust types"
authors = ["Tomoikey"]
repository = "https://github.com/tomoikey/refined-type"
readme = "README.md"
categories = ["accessibility", "development-tools", "rust-patterns"]
license = "MIT"
version = "0.5.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.15"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.89"
serde_json = "1.0.128"